<resources>
    <string name="app_name">WCE Event Manager</string>
    <string name="app_logo">app logo</string>
    <string name="app_Fname">WCE Event Organizer</string>
    <string name="next">Next</string>
    <string name="confused">Confused</string>
    <string name="confused_text_decp">Confused where all your time flies and all the tasks\n you planned for the day left unchecked</string>
    <string name="time_manage_decp">Want to manage your time so that you get extra hours for yourself!</string>
    <string name="time_management">Time Management</string>
    <string name="getstarted">From now onwards using the Walchand\nEvent Manager .which will help you to list\nall the events and other happening in\nour college</string>
    <string name="get_started">Get Started</string>
    <string name="get_started_logo">get_started_logo</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_decp">Use your college id to sign up to the account.</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_desp">Use your college id to login to your account.</string>
    <string name="login">Login</string>
    <string name="welcome_desp">Login with your allotted college email id. If you didn\'t created the account yet then sign up using the college id.</string>
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_texty">Welcome</string>
    <string name="welcome_text2">Let\'s see what\'s there for you</string>
    <string name="calendar">Calendar</string>
    <string name="let_s_see_what_is_planned_for_the_week">Let\'s see what is planned for the week!</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="fab">fab</string>
    <string name="create_an_event_at_appropriate_time">Create an event at appropriate time!</string>
    <string name="addevent">Add Event</string>
    <string name="text1">Area of Inerest</string>
    <string name="branches">Branches</string>
    <string name="civil">Civil</string>
    <string name="mechanical">Mechanical</string>
    <string name="electrical">Electrical</string>
    <string name="cse">CSE</string>
    <string name="it">IT</string>
    <string name="electronics">Electronics</string>
    <string name="platform">Platform</string>
    <string name="hybrid">Hybrid</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="link_for_meet">Link for meet</string>
    <string name="link_online_meet_link">Link (Online Meet Link)</string>
    <string name="venue">Venue</string>
    <string name="loc">Enter Location (If Event is Offline Mode)</string>
    <string name="start_time">Start Time</string>
    <string name="enter_start_time">Enter Start Time</string>
    <string name="duration">Duration</string>
    <string name="enter_duration_of_the_event">Enter Duration of the event</string>
    <string name="date">Date</string>
    <string name="enter_event_type">Enter Event Type</string>
    <string name="event_type">Event Type</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="event_name">Event Name</string>
    <string name="add_event">Add Event</string>
    <string name="enter_interest_ex_ml_ai_ds">Enter Interest Ex ML,AI,DS</string>
    <string name="enter_meet_link">Enter Meet Link</string>
    <string name="tags_toast">Only 2 tags are allowed</string>
    <string name="empty_tag">A tag shouldn\'t be empty.</string>
    <string name="duplicate_tag">Tag already exists</string>
    <string name="club_service">Club Service</string>
    <string name="textview">TextView</string>
    <string name="select_event">Select Event</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">OR</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="text">text</string>


    <string-array name="events">
        <item>Mega Event</item>
        <item>Club Service</item>
        <item>Event</item>
    </string-array>

</resources>