<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeActivity"
    android:background="@drawable/background">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="155dp"
        android:layout_height="146dp"
        android:src="@drawable/weologo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_logo"
        />

    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView"
        android:layout_marginTop="30dp"
        android:background="@drawable/whitecard">

        <TextView
            android:id="@+id/textView"
            android:layout_width="153dp"
            android:layout_height="53dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font1"
            android:text="@string/welcome"
            android:textColor="#FF7F50"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="290dp"
            android:layout_height="74dp"
            android:layout_below="@id/textView"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font1"
            android:text="@string/welcome_desp"
            android:textColor="#0C0C0C"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_below="@id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#7090CE"
            android:fontFamily="@font/font1"
            android:text="@string/login"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#7090CE"
            android:fontFamily="@font/font1"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/guest"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_below="@id/signup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#7090CE"
            android:fontFamily="@font/font1"
            android:text="@string/continue_as_guest"
            android:textColor="#FDFEFF"

          />

    </RelativeLayout>


</RelativeLayout>