<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".RegistrationFormOneFragment">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/whitecard2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backForm1"
            app:icon="@drawable/ic_arrow_back"
            app:iconTint="@color/orange"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/addevent"
            android:textColor="@color/orange"
            android:textSize="35sp"
            android:textStyle="bold|normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@+id/txt1"
            android:layout_centerHorizontal="true"
            android:text="@string/create_an_event_at_appropriate_time"
            android:textColor="#80000000"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/whitecard3">

        <TextView
            android:id="@+id/eventname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font1"
            android:text="@string/event_name"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EditTextEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventname"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="TODO"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/font1"
            android:hint="@string/enter_event_name"
            android:inputType="text"
            android:textSize="15sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/eventtype"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_below="@+id/EditTextEventName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font1"
            android:text="@string/event_type"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:id="@+id/TILEventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/eventtype"
            android:layout_marginStart="20dp"

            >
            <AutoCompleteTextView
                android:id="@+id/DropDownMenuBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/select_event"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Datetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TILEventType"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/font1"
            android:text="@string/date"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="132dp"
            android:layout_height="33dp"
            android:layout_below="@id/Datetext"
            android:layout_marginStart="20dp"
            android:text="@string/date"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/starttime"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@id/Date"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font1"
            android:text="@string/start_time"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/EditTextStartTime"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@id/starttime"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:backgroundTint="@color/orange"
            android:ems="10"
            android:hint="@string/enter_start_time"
            android:inputType="time"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditTextStartTime"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font1"
            android:text="@string/duration"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EditTextDuration"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Duration"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:backgroundTint="@color/orange"
            android:ems="10"
            android:hint="@string/enter_duration_of_the_event"
            android:inputType="numberSigned"
            android:textSize="14sp" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_form"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:contentDescription="@string/fab"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        app:tint="@color/white" />

</RelativeLayout>