<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".screens.GetStartedScreen">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/onboarding_getstarted"
        android:layout_width="300dp"
        android:layout_height="297dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/get_started_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font1"
        android:text="@string/get_started"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="339dp"
        android:layout_height="95dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font1"
        android:text="@string/getstarted"
        android:textColor="#FAF7F7"
        android:textSize="14sp" />

</LinearLayout>